# ocaml-oxidizer

./: .dockerignore  .envrc  .gitignore  Cargo.toml  README.md  action.yml  build.rs  devenv.nix  install.sh  prelude.ml
.github/workflows/: bump.yml  ci.yml  release.yml
docker/: Dockerfile.alpine
examples/: domains.ml  effects.ml  hello.ml  hostfn.ml  net.ml
lib/: glue.ml  make_cmis.ml  net.ml
scripts/: bump-version.sh  bump_version.ml  release.ml  release.sh
src/: lib.rs  main.rs  networking.rs  update.rs
tests/: cli.rs  embed.rs  networking.rs
